--- a/math/pom.xml
+++ b/math/pom.xml
@@ -16,4 +16,13 @@
         <maven.compiler.target>12</maven.compiler.target>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
